Update APIs and more
Add MIT License
Fix query bug